integration_tests/codegen_fail/fail/interface/no_fields.rs
use juniper::graphql_interface;

#[graphql_interface]
trait Character {}

fn main() {}
