integration_tests/codegen_fail/fail/interface/no_fields.stderr
error: GraphQL interface must have at least one field
 --> fail/interface/no_fields.rs:4:1
  |
4 | trait Character {}
  | ^^^^^^^^^^^^^^^^^^
  |
  = note: https://spec.graphql.org/June2018/#sec-Interfaces
